--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         body {
             background: linear-gradient(135deg, #ff6b9d 0%, #c94b6e 100%);
-            font-family: 'Shag Lounge', 'Cera Round Pro', 'Comic Sans MS', 'Arial Rounded MT Bold', sans-serif;
+            font-family: 'Shag Lounge', sans-serif;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -50,7 +50,7 @@
             color: white;
             padding: 15px 40px;
             font-size: 1.3em;
-            font-family: 'Shag Lounge', 'Cera Round Pro', 'Comic Sans MS', sans-serif;
+            font-family: 'Shag Lounge', sans-serif;
             font-weight: 700;
             border: none;
             border-radius: 50px;
