Update font source URL in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Shag Lounge';
-            src: url('/fonts/ShagCyrillic-Lounge.ttf') format('truetype');
+            src: url('https://joestrawberry2.github.io/bfdia5esbv/fonts/ShagCyrillic-Lounge.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
