Update font source format in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Shag Lounge';
-            src: url('/fonts/ShagCyrillic-Lounge.ttf') format('truetype');
+            src: url('/fonts/Shag-Lounge.woff') format('woff');
             font-weight: normal;
             font-style: normal;
         }
