--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Shag Lounge';
-            src: url('/fonts/Shag-Lounge.woff') format('woff');
+            src: url('https://joestrawberry2.github.io/bfdia5esbv/fonts/Shag-Lounge.woff') format('woff');
             font-weight: normal;
             font-style: normal;
         }
